add balance to customers
